# party-registration

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SQL_SERVER_MIGRATION.md  desc.txt  package-lock.json  package.json  pr_description.md  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh  setup_local.sh
.devcontainer/saml-idp/: authsources.php
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: backend-test.yml  pre-commit.yml
backend/: .env  .env.template  AGENTS.md  README.md  alembic.ini  package.json  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 123806024a92_make_incident_description_nullable.py  3dc73576763e_add_created_at_to_all_entities.py  6315f52c93cf_add_email_unsubscribes.py  657666028e23_add_password_reset_token_to_police.py  a0853d102a0e_initial_setup.py  b3c4d5e6f7a8_add_invite_tokens.py  c4d5e6f7a8b9_remove_invite_token_string.py  f18af3b77940_initial_setup.py
backend/script/: create_db.py  create_expired_invite.py  create_test_db.py  delete_db.py  generate_schema.py  reset_dev.py  test.py
backend/src/: main.py
backend/src/core/: authentication.py  bcrypt_utils.py  config.py  database.py  excel_export.py  exceptions.py  models.py  query_utils.py  types.py
backend/src/core/utils/: date_utils.py  email_utils.py  excel_utils.py  phone_utils.py  query_utils.py
backend/src/entities/: party_entity.py
backend/src/models/: party_model.py
backend/src/modules/: __init__.py
backend/src/modules/account/: account_entity.py  account_model.py  account_router.py  account_service.py  account_service_test.py  invite_token_entity.py
backend/src/modules/address/: address_entity.py
backend/src/modules/auth/: __init__.py  auth_entity.py  auth_model.py  auth_router.py  auth_service.py  refresh_token_entity.py
backend/src/modules/complaint/: complaint_entity.py  complaint_model.py  complaint_router.py  complaint_service.py
backend/src/modules/incident/: incident_entity.py  incident_model.py  incident_router.py  incident_service.py
backend/src/modules/location/: location_base_model.py  location_entity.py  location_model.py  location_router.py  location_service.py
backend/src/modules/notification/: email_unsubscribe_entity.py  notification_model.py  notification_router.py  notification_service.py
backend/src/modules/party/: party_entity.py  party_model.py  party_router.py  party_service.py
backend/src/modules/police/: police_entity.py  police_model.py  police_router.py  police_service.py
backend/src/modules/student/: student_entity.py  student_model.py  student_router.py  student_service.py
backend/src/modules/user/: user_entity.py  user_model.py  user_router.py  user_service.py
backend/src/script/: create_db.py  delete_db.py  reset_dev.py
backend/src/services/: party_service.py
backend/src/tests/: party_service_test.py
backend/test/: conftest.py
backend/test/core/utils/email_utils/: email_utils_test.py
backend/test/core/utils/query_utils/: query_utils_test.py
backend/test/modules/: location_router_test.py  location_service_test.py
backend/test/modules/account/: account_csv_router_test.py  account_router_test.py  account_service_test.py  account_utils.py  conftest.py  invite_token_utils.py
backend/test/modules/auth/: auth_router_test.py  auth_service_test.py  auth_utils.py  conftest.py
backend/test/modules/complaint/: __init__.py  complaint_router_test.py  complaint_service_test.py  complaint_utils.py
backend/test/modules/incident/: incident_csv_router_test.py  incident_list_features_test.py  incident_router_test.py  incident_service_test.py  incident_utils.py  test_incident_list_features.py
backend/test/modules/location/: location_csv_router_test.py  location_router_crud_test.py  location_router_test.py  location_service_test.py  location_utils.py
backend/test/modules/notification/: notification_router_test.py  notification_service_test.py
backend/test/modules/party/: party_list_features_test.py  party_router_test.py  party_service_radius_tests.py  party_service_test.py  party_utils.py  test_party_list_features.py
backend/test/modules/police/: police_router_test.py  police_service_test.py  police_utils.py
backend/test/modules/query_utils/: test_query_utils.py
backend/test/modules/student/: student_csv_router_test.py  student_router_test.py  student_service_test.py  student_utils.py
backend/test/modules/user/: user_service_test.py
backend/test/utils/: geo.py  pagination_test_utils.py  resource_test_utils.py
backend/test/utils/http/: assertions.py  test_templates.py
deploy/: .env.prod.template  Dockerfile.backend  Dockerfile.frontend  README.md  backend-entrypoint.sh  docker-compose.prod.yml  map-style.json
frontend/: .env.template  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next-auth.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: README.md  global-setup.ts  tsconfig.json
frontend/e2e/helpers/: auth.helpers.ts  auth.ts  db.helpers.ts  db.ts  exhaustive.helpers.ts  exhaustive.ts  fixtures.helpers.ts  (+7 more)
frontend/shared/: mock_data.json
frontend/src/: proxy.ts
shared/: mock_data.json
tdd/: tdd23.md  tdd32.md  tdd33.md
(+338 files in other folders)
