[project]
name = "party-registration"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pre-commit==4.0.1",
  "ruff==0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"  # Should match Dockerfile

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF", "N"]
fixable = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF", "N"]
ignore = [
  "B008", # Allows use of Depends()
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
